# PyWEB_homework_mod_14

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0a317f4cab0d_add_table_users.py  adadb0ea50b3_init.py  b098876192f7_add_user_role.py  bacbfa255925_add_verifi_for_user.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2696  2840  2841
postgres-data/base/16384/: 1247  1249  1259  16387  16390  16398  16401  16404  16405  16406  16407  16413  16415  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  (+6 more)
postgres-data/base/5/: 1247  1249  1259  2224  24577  24578  24582  24583  24585  24586  24589  24591  24593  24594  24597  24599  24613  24614  24617  24619  24621  24627  24633  24640  24655  24656  24670  24683  24684  24685  24704  24705  24710  24714  24720  24722  24730  24736  24738  24750  (+40 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: verify_email.html
src/templates/: index.html
tests/: test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
